--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,129 @@
 body {
-	background: blue;
+	width: 75%;
+	font-family: Helvetica;
+	padding: 2%;
+	margin: 2%;
+	background-color: #5F9EA0;
 }
+
+img {
+	width: 100%;
+ 	padding-left: 2%;
+	padding-right: 2%;
+	padding-bottom: 1%;
+}
+
+h1 {
+	letter-spacing: 1px;
+	width: 50%;
+	font-size: 55px;
+	font-family: Times New Roman, serif;
+	padding: 3%;
+	font-weight: bold;
+	border-style: solid;
+}
+
+.byline{
+	font-style: italic;
+}
+
+hr {
+    display: block;
+    height: 5px;
+    border: 0;
+    border-top: 2px solid #696969;
+    margin: 1em 0;
+    padding: 0;
+}
+
+.first_h2 {
+	font-family: Gill Sans, Verdana;
+	font-size: 11px;
+	line-height: 14px;
+	text-transform: uppercase;
+	letter-spacing: 2px;
+	font-weight: bold
+}
+
+.logo {
+	margin: auto;
+    width: 50%;
+    padding: 10px;
+    border: 1px solid #999;
+	background-color: #fcfcfc;
+	padding: 4px;
+}
+
+.intro {
+	border-style: solid;
+	border-width: 2px;
+	border-color: #000;
+	width: 75%;
+	padding: 2%;
+}
+
+.house {
+	width: 70%;
+	float: left;
+	padding-left: 2%;
+	padding-right: 2%;
+	padding-bottom: 1%;
+}
+
+.house_desc {
+margin: 2%;
+}
+
+.castle {
+	padding-left: 2%;
+	padding-right: 2%;
+}
+
+.or_this {
+	font-weight: bolder;
+}
+
+.after_house {
+	text-align: center;
+	background-image: url("background_image.jpg");
+	padding-left: 20%;
+	padding-right: 20%;
+	padding-top: 1%;
+	padding-bottom: 1%;
+	width: 60%;
+	font-size: 3em;
+	color: #FFF;
+	text-transform: uppercase;
+}
+
+.list {
+	text-align: center;
+}
+
+a:link {
+    color: grey;
+}
+
+a:visited {
+    color: #8A2BE2;
+}
+
+#first, #second {
+	float: left;
+	width: 46%;
+	padding: 1%;
+	margin: 1%;
+}
+
+/*a:link, a:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 14px 25px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+}
+
+a:hover, a:active {
+    background-color: red;
+}*/
