Finish the project 3.5 completely

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,7 @@ body {
 	font-family: Helvetica;
 	padding: 2%;
 	margin: 2%;
-	background-color: #5F9EA0;
+	background-color: #DB7093;
 }
 
 img {
@@ -101,7 +101,7 @@ margin: 2%;
 }
 
 a:link {
-    color: grey;
+    color: #2E8B57;
 }
 
 a:visited {
@@ -115,7 +115,20 @@ a:visited {
 	margin: 1%;
 }
 
-/*a:link, a:visited {
+
+
+th, td {
+    padding: 15px;
+    text-align: left;
+}
+
+table {
+	width: 80%;
+	border-radius: 10px;
+	background-color: grey;
+}
+
+#button:link, #button:visited {
     background-color: #f44336;
     color: white;
     padding: 14px 25px;
@@ -124,6 +137,39 @@ a:visited {
     display: inline-block;
 }
 
-a:hover, a:active {
+#button:hover, #button:active {
     background-color: red;
-}*/
+}
+
+
+.no {
+	text-align: center;
+}
+
+.sidebar {
+	position: fixed;
+	display: inline-block;
+	width: 90%;
+    vertical-align: top;
+}
+#button {
+	float: right;
+}
+
+@media screen and (max-width: 650px) {
+  h1 {
+    font-size: 1em;
+  }
+  #button:link, #button:visited {
+    background-color: #f44336;
+    color: white;
+    padding: 4px 10px;
+    text-align: center; 
+    text-decoration: none;
+    display: inline-block;
+  }
+
+  #button:hover, #button:active {
+    background-color: red;
+  }
+}
